Created app structure in HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,40 @@
   </head>
   <body>
     <div class="container">
-      <h1>Weather App</h1>
+      <div class="row">
+        <div class="col-4">
+          <h1>Póvoa de Varzim</h1>
+          <h2>Friday, Nov 1</h2>
+          <p>18:40</p>
+        </div>
+        <div class="col-4">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+            alt="Cloudy"
+          />
+          <p>Cloudy</p>
+          <p>18 <small>ºC | ºF</small></p>
+          <p>19º | 22º</p>
+        </div>
+        <div class="col-4">
+          <ul>
+            <li>Sunrise: 7:00</li>
+            <li>Sunset: 19:00</li>
+          </ul>
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 80%</li>
+            <li>Wind: 3 km/h</li>
+          </ul>
+        </div>
+      </div>
+      <span
+        ><a
+          href="https://github.com/JessicaNovo/vanilla-weather-app"
+          target="_blank"
+          >Open-source code</a
+        >, by Jéssica Novo</span
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
