Styled the weather section

--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
           </div>
           <div class="col-sm-6 weather">
             <img
-              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+              src="https://cdn1.iconfinder.com/data/icons/weather-forecast-meteorology-color-1/128/weather-partly-cloudy-512.png"
               alt="Cloudy"
             />
-            <p>Cloudy</p>
-            <p>18 <small>ºC | ºF</small></p>
-            <small>19º | 22º</small>
+            <span class="weather-description">Cloudy</span>
+            <div class="weather-container">
+              <span class="temperature">18</span
+              ><small class="degrees"
+                ><a href="#">ºC</a> | <a href="#">ºF</a></small
+              >
+            </div>
+            <span class="min-max-temp">19º | 22º</span>
           </div>
           <div class="col-sm-3 weather-details">
             <ul>
