Updated weather icon from API

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
             <p class="time">Last updated: <span id="time"></span></p>
           </div>
           <div class="col-sm-6 weather">
-            <img
-              src="https://cdn1.iconfinder.com/data/icons/weather-forecast-meteorology-color-1/128/weather-partly-cloudy-512.png"
-              alt="Cloudy"
-            />
+            <img src="" alt="Cloudy" id="icon" />
             <span class="weather-description" id="description"></span>
             <div class="weather-container">
               <span class="temperature" id="current-temperature"></span
