Added temperature unit conversion

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
             <span class="weather-description" id="description"></span>
             <div class="weather-container">
               <span class="temperature" id="current-temperature"></span
-              ><small class="degrees"
-                ><a href="#">ºC</a> | <a href="#">ºF</a></small
+              ><small class="units"
+                ><a href="#" id="celsius">ºC</a> |
+                <a href="#" id="fahrenheit">ºF</a></small
               >
             </div>
             <div class="min-max-temp">
