Styled temperature unit links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <span
+      <span class="code"
         ><a
           href="https://github.com/JessicaNovo/vanilla-weather-app"
           target="_blank"
