--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <form id="search-city">
-          <input
-            type="search"
-            placeholder="Search a city"
-            autocomplete="off"
-            id="city-input"
-          />
-          <input type="submit" value="Search" />
-        </form>
+        <div class="clearfix">
+          <form id="search-city" class="float-left">
+            <input
+              type="search"
+              placeholder="Search a city"
+              autocomplete="off"
+              id="city-input"
+            />
+            <input type="submit" value="Search" />
+          </form>
+          <button id="current" class="float-left">Current</button>
+        </div>
         <div class="row align-items-center">
           <div class="col-sm-4">
             <h1 id="city"></h1>
