--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           href="https://github.com/JessicaNovo/vanilla-weather-app"
           target="_blank"
           >Open-source code</a
-        >, by Jéssica Novo</span
+        >
+        by Jéssica Novo</span
       >
     </div>
     <script src="src/app.js"></script>
