Implemented the hourly forecast

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             </ul>
           </div>
         </div>
+        <hr />
+        <div
+          class="row align-items-center justify-content-center forecast"
+          id="forecast"
+        ></div>
       </div>
       <span class="code"
         ><a
