Added some spacing between the search and the main section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <div class="clearfix">
+        <div class="clearfix search">
           <form id="search-city" class="float-left">
             <input
               type="search"
